--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 **/__pycache__
 **/venv
 
-scripts/tabelle-lista-ordinata.tex
-scripts/tabelle-abr.tex
-scripts/tabelle-rn-aumentato.tex
+scripts/latex
+scripts/images
