--- a/.github/workflows/zip.yaml
+++ b/.github/workflows/zip.yaml
@@ -19,5 +19,6 @@ jobs:
           path: |
             !.gitignore
             scripts/*
+            !scripts/requirements.txt
             latex/*
             esercizio.ipynb
