--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -5,12 +5,17 @@ Jinja2==3.1.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
 matplotlib==3.8.0
+mypy==1.5.1
+mypy-extensions==1.0.0
 numpy==1.26.0
 packaging==23.2
 pandas==2.1.1
+pandas-stubs==2.1.1.230928
 Pillow==10.0.1
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 six==1.16.0
+types-pytz==2023.3.1.1
+typing_extensions==4.8.0
 tzdata==2023.3
